--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Yuzhu Wan - OMIS 475 Assignment Basic Webpage</h1>
 <p>This is my HW.</p>
-<p>My name is Yuzhu Wan, and I like your class.</p>
+<p>My name is Yuzhu Wan, and I like your class!</p>
 </body>
 </html>
